channel title too long whitespace break fixed

--- a/frontend/src/component/playlist-tree/playlist-tree.scss
+++ b/frontend/src/component/playlist-tree/playlist-tree.scss
@@ -78,6 +78,7 @@
           display: flex;
           flex-flow: row;
           align-items: center;
+          white-space: nowrap;
         }
 
         .tree-channel-nr {
